services/kservicegroup: include storageId in sorting key

KServiceGroupPrivate::entries uses a QMap for sorting, using the
sort key as the key to the map. The sort key is the display name of the
application and its generic name (with the order being determined by a
parameter). This will fail if two separate apps have the same name and
generic name; both evaluate to the same key, so only one is added to the
final list and the other just goes away. (This is in particular common
for simple apps where the name is itself a generic name, like
"Calculator", especially now that apps often don't have a generic name
set).

Instead, also add the storageId to the sort key, which should make it
unique.

BUG: 516802